[gd_scene load_steps=6 format=2]

[ext_resource path="res://entity/water_blob/water_blob.png" type="Texture" id=1]
[ext_resource path="res://entity/water_blob/water_blob.gd" type="Script" id=2]
[ext_resource path="res://entity/attack_box.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "WaterWobble"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[node name="WaterBlob" type="Node2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.9, 1.1 )
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "WaterWobble"
anims/WaterWobble = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="StartPosition" type="Position2D" parent="."]

[node name="EndPosition" type="Position2D" parent="."]

[node name="AttackBox" parent="." instance=ExtResource( 3 )]
entity_path = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
shape = SubResource( 2 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
